// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`codegen output — snapshots > EVM legacy codegen produces stable output 1`] = `
{
  "test-token/contract.ts": "// SPDX-License-Identifier: MIT
// Auto-generated by Polyq — do not edit
// ABI and addresses for TestToken

export const TEST_TOKEN_ABI = [
  {
    "type": "function",
    "name": "transfer",
    "inputs": [
      {
        "name": "to",
        "type": "address"
      },
      {
        "name": "amount",
        "type": "uint256"
      }
    ],
    "outputs": [
      {
        "name": "",
        "type": "bool"
      }
    ],
    "stateMutability": "nonpayable"
  },
  {
    "type": "function",
    "name": "approve",
    "inputs": [
      {
        "name": "spender",
        "type": "address"
      },
      {
        "name": "amount",
        "type": "uint256"
      }
    ],
    "outputs": [
      {
        "name": "",
        "type": "bool"
      }
    ],
    "stateMutability": "nonpayable"
  },
  {
    "type": "function",
    "name": "balanceOf",
    "inputs": [
      {
        "name": "account",
        "type": "address"
      }
    ],
    "outputs": [
      {
        "name": "",
        "type": "uint256"
      }
    ],
    "stateMutability": "view"
  },
  {
    "type": "function",
    "name": "allowance",
    "inputs": [
      {
        "name": "owner",
        "type": "address"
      },
      {
        "name": "spender",
        "type": "address"
      }
    ],
    "outputs": [
      {
        "name": "",
        "type": "uint256"
      }
    ],
    "stateMutability": "view"
  },
  {
    "type": "event",
    "name": "Transfer",
    "inputs": [
      {
        "name": "from",
        "type": "address",
        "indexed": true
      },
      {
        "name": "to",
        "type": "address",
        "indexed": true
      },
      {
        "name": "value",
        "type": "uint256",
        "indexed": false
      }
    ]
  },
  {
    "type": "event",
    "name": "Approval",
    "inputs": [
      {
        "name": "owner",
        "type": "address",
        "indexed": true
      },
      {
        "name": "spender",
        "type": "address",
        "indexed": true
      },
      {
        "name": "value",
        "type": "uint256",
        "indexed": false
      }
    ]
  },
  {
    "type": "error",
    "name": "InsufficientBalance",
    "inputs": [
      {
        "name": "available",
        "type": "uint256"
      },
      {
        "name": "required",
        "type": "uint256"
      }
    ]
  }
] as const

export type TestTokenAbi = typeof TEST_TOKEN_ABI

/**
 * Contract addresses per network. Add your deployed addresses here.
 */
export const TEST_TOKEN_ADDRESS: Record<string, \`0x\${string}\`> = {
  // localhost: '0x...',
  // sepolia: '0x...',
  // mainnet: '0x...',
}
",
  "test-token/errors.ts": "// SPDX-License-Identifier: MIT
// Auto-generated by Polyq — do not edit
// Custom errors for TestToken

export interface InsufficientBalanceError {
  available: bigint
  required: bigint
}
",
  "test-token/events.ts": "// SPDX-License-Identifier: MIT
// Auto-generated by Polyq — do not edit
// Event types for TestToken

export interface TransferEvent {
  from: \`0x\${string}\`
  to: \`0x\${string}\`
  value: bigint
}

export interface ApprovalEvent {
  owner: \`0x\${string}\`
  spender: \`0x\${string}\`
  value: bigint
}
",
  "test-token/index.ts": "// SPDX-License-Identifier: MIT
// Auto-generated by Polyq — do not edit

export * from './contract'
export * from './types'
export * from './events'
export * from './errors'
",
  "test-token/types.ts": "// SPDX-License-Identifier: MIT
// Auto-generated by Polyq — do not edit
// Function types for TestToken

export interface TransferArgs {
  to: \`0x\${string}\`
  amount: bigint
}

export interface TransferReturn {
  value: boolean
}

export interface ApproveArgs {
  spender: \`0x\${string}\`
  amount: bigint
}

export interface ApproveReturn {
  value: boolean
}

export interface BalanceOfArgs {
  account: \`0x\${string}\`
}

export interface BalanceOfReturn {
  value: bigint
}

export interface AllowanceArgs {
  owner: \`0x\${string}\`
  spender: \`0x\${string}\`
}

export interface AllowanceReturn {
  value: bigint
}
",
}
`;

exports[`codegen output — snapshots > EVM viem codegen produces stable output 1`] = `
{
  "test-token/abi.ts": "// SPDX-License-Identifier: MIT
// Auto-generated by Polyq — do not edit
// ABI for TestToken (viem-ready, as const-asserted)

import type { Abi } from 'viem'

export const TEST_TOKEN_ABI = [
  {
    "type": "function",
    "name": "transfer",
    "inputs": [
      {
        "name": "to",
        "type": "address"
      },
      {
        "name": "amount",
        "type": "uint256"
      }
    ],
    "outputs": [
      {
        "name": "",
        "type": "bool"
      }
    ],
    "stateMutability": "nonpayable"
  },
  {
    "type": "function",
    "name": "approve",
    "inputs": [
      {
        "name": "spender",
        "type": "address"
      },
      {
        "name": "amount",
        "type": "uint256"
      }
    ],
    "outputs": [
      {
        "name": "",
        "type": "bool"
      }
    ],
    "stateMutability": "nonpayable"
  },
  {
    "type": "function",
    "name": "balanceOf",
    "inputs": [
      {
        "name": "account",
        "type": "address"
      }
    ],
    "outputs": [
      {
        "name": "",
        "type": "uint256"
      }
    ],
    "stateMutability": "view"
  },
  {
    "type": "function",
    "name": "allowance",
    "inputs": [
      {
        "name": "owner",
        "type": "address"
      },
      {
        "name": "spender",
        "type": "address"
      }
    ],
    "outputs": [
      {
        "name": "",
        "type": "uint256"
      }
    ],
    "stateMutability": "view"
  },
  {
    "type": "event",
    "name": "Transfer",
    "inputs": [
      {
        "name": "from",
        "type": "address",
        "indexed": true
      },
      {
        "name": "to",
        "type": "address",
        "indexed": true
      },
      {
        "name": "value",
        "type": "uint256",
        "indexed": false
      }
    ]
  },
  {
    "type": "event",
    "name": "Approval",
    "inputs": [
      {
        "name": "owner",
        "type": "address",
        "indexed": true
      },
      {
        "name": "spender",
        "type": "address",
        "indexed": true
      },
      {
        "name": "value",
        "type": "uint256",
        "indexed": false
      }
    ]
  },
  {
    "type": "error",
    "name": "InsufficientBalance",
    "inputs": [
      {
        "name": "available",
        "type": "uint256"
      },
      {
        "name": "required",
        "type": "uint256"
      }
    ]
  }
] as const satisfies Abi

export type TestTokenAbi = typeof TEST_TOKEN_ABI
",
  "test-token/contract.ts": "// SPDX-License-Identifier: MIT
// Auto-generated by Polyq — do not edit
// Typed viem contract wrapper for TestToken

import type { Address, Client } from 'viem'
import { getContract } from 'viem'
import { TEST_TOKEN_ABI } from './abi'

/**
 * Build a typed viem contract instance for TestToken.
 *
 * @example
 *   const testToken = createTestTokenContract('0x...', publicClient)
 *   const value = await testToken.read.someMethod()
 */
export function createTestTokenContract(address: Address, client: Client) {
  return getContract({ address, abi: TEST_TOKEN_ABI, client })
}
",
  "test-token/index.ts": "// SPDX-License-Identifier: MIT
// Auto-generated by Polyq — do not edit

export * from './abi'
export * from './contract'
",
}
`;

exports[`codegen output — snapshots > SVM legacy codegen produces stable output 1`] = `
{
  "test-program/accounts.ts": "// SPDX-License-Identifier: MIT
// Auto-generated by Polyq — do not edit
// Account fetchers for test_program

import { PublicKey, type Connection } from '@solana/web3.js'
import * as borsh from '@coral-xyz/borsh'
import type * as types from './types'

export const PROGRAM_ID = new PublicKey('11111111111111111111111111111111')

const GlobalConfigAccountLayout = borsh.struct([
  borsh.publicKey('authority'),
  borsh.u64('maxSupply'),
  borsh.str('name'),
  borsh.bool('isActive'),
])

/** Account discriminator for GlobalConfig: [149, 8, 156, 202, 160, 252, 176, 217] */
export const GLOBAL_CONFIG_DISCRIMINATOR = [149, 8, 156, 202, 160, 252, 176, 217] as const

/**
 * Fetch and deserialize a GlobalConfig account.
 */
export async function fetchGlobalConfig(
  connection: Connection,
  address: PublicKey,
): Promise<types.GlobalConfig | null> {
  const accountInfo = await connection.getAccountInfo(address)
  if (!accountInfo) return null

  // Verify discriminator
  const disc = [...accountInfo.data.subarray(0, 8)]
  const expected = GLOBAL_CONFIG_DISCRIMINATOR
  if (!disc.every((b, i) => b === expected[i])) {
    throw new Error('Invalid account discriminator for GlobalConfig')
  }

  return GlobalConfigAccountLayout.decode(accountInfo.data.subarray(8)) as types.GlobalConfig
}
",
  "test-program/errors.ts": "// SPDX-License-Identifier: MIT
// Auto-generated by Polyq — do not edit
// Error codes for test_program

export enum ProgramError {
  /** Not authorized */
  Unauthorized = 6000,
  /** Invalid supply amount */
  InvalidSupply = 6001,
}

export const PROGRAM_ERRORS: Record<number, { name: string, msg: string }> = {
  6000: { name: 'Unauthorized', msg: 'Not authorized' },
  6001: { name: 'InvalidSupply', msg: 'Invalid supply amount' },
}

export function getProgramError(code: number): { name: string, msg: string } | undefined {
  return PROGRAM_ERRORS[code]
}
",
  "test-program/index.ts": "// SPDX-License-Identifier: MIT
// Auto-generated by Polyq — do not edit

export * from './types'
export * from './pda'
export * from './instructions'
export * from './accounts'
export * from './errors'
",
  "test-program/instructions.ts": "// SPDX-License-Identifier: MIT
// Auto-generated by Polyq — do not edit
// Instruction builders for test_program

import { PublicKey, TransactionInstruction } from '@solana/web3.js'
import * as borsh from '@coral-xyz/borsh'
import type * as types from './types'

export const PROGRAM_ID = new PublicKey('11111111111111111111111111111111')

const TransferParamsLayout = borsh.struct([
  borsh.str('memo'),
  borsh.u16('feeBps'),
])

export interface InitializeAccounts {
  authority: PublicKey
  config: PublicKey
  systemProgram?: PublicKey
}

export interface InitializeArgs {
  maxSupply: bigint
  name: string
}

export function createInitializeInstruction(accounts: InitializeAccounts, args: InitializeArgs): TransactionInstruction {
  const keys = [
    { pubkey: accounts.authority, isWritable: true, isSigner: true },
    { pubkey: accounts.config, isWritable: true, isSigner: false },
    { pubkey: accounts.systemProgram ?? new PublicKey('11111111111111111111111111111111'), isWritable: false, isSigner: false },
  ]

  const discriminator = Buffer.from([175, 175, 109, 31, 13, 152, 155, 237])
  const argsLayout = borsh.struct([
    borsh.u64('maxSupply'),
    borsh.str('name'),
  ])
  const argsBuffer = Buffer.alloc(10240)
  const argsLen = argsLayout.encode(args, argsBuffer)
  const data = Buffer.concat([discriminator, argsBuffer.subarray(0, argsLen)])

  return new TransactionInstruction({
    keys,
    programId: PROGRAM_ID,
    data,
  })
}

export interface TransferAccounts {
  from: PublicKey
  to: PublicKey
  config: PublicKey
}

export interface TransferArgs {
  amount: bigint
  params: types.TransferParams
}

export function createTransferInstruction(accounts: TransferAccounts, args: TransferArgs): TransactionInstruction {
  const keys = [
    { pubkey: accounts.from, isWritable: true, isSigner: true },
    { pubkey: accounts.to, isWritable: true, isSigner: false },
    { pubkey: accounts.config, isWritable: false, isSigner: false },
  ]

  const discriminator = Buffer.from([163, 52, 200, 231, 140, 3, 69, 186])
  const argsLayout = borsh.struct([
    borsh.u64('amount'),
    TransferParamsLayout.replicate('params'),
  ])
  const argsBuffer = Buffer.alloc(10240)
  const argsLen = argsLayout.encode(args, argsBuffer)
  const data = Buffer.concat([discriminator, argsBuffer.subarray(0, argsLen)])

  return new TransactionInstruction({
    keys,
    programId: PROGRAM_ID,
    data,
  })
}
",
  "test-program/pda.ts": "// SPDX-License-Identifier: MIT
// Auto-generated by Polyq — do not edit
// PDA derivation helpers for test_program

import { PublicKey } from '@solana/web3.js'

export const PROGRAM_ID = new PublicKey('11111111111111111111111111111111')

export function deriveConfig(programId: PublicKey = PROGRAM_ID): [PublicKey, number] {
  return PublicKey.findProgramAddressSync(
    [Buffer.from('config')],
    programId,
  )
}
",
  "test-program/types.ts": "// SPDX-License-Identifier: MIT
// Auto-generated by Polyq — do not edit
// Source: test_program v0.1.0

export interface GlobalConfig {
  authority: PublicKey
  maxSupply: bigint
  name: string
  isActive: boolean
}

export interface TransferParams {
  memo: string
  feeBps: number
}

export type Status =
  | { Active: Record<string, never> } |
  | { Paused: Record<string, never> } |
  | { Closed: Record<string, never> }
",
}
`;
